<resources>
    <string name="app_name">Password Wallet</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="wallet_icon">Wallet icon</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="restore_password">Restore password</string>
    <string name="name">Name</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_logo_icon">App logo icon</string>
    <string name="add_password">Add password</string>
    <string name="generate_password">Generate password</string>
    <string name="generate_a_password">Generate a password</string>
    <string name="add_a_password">Add a password</string>
    <string name="title_activity_asd">MainActivity</string>
    <string name="title_activity_theactivityyoukonw">MainActivity</string>
    <string name="title_activity_yasda">MainActivity</string>
    <string name="title_activity_main_activity">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_30">30</string>
    <string name="_5">5</string>
    <string name="generate">Generate</string>
    <string name="a_z">a-z</string>
    <string name="a_z_caps">A-Z</string>
    <string name="_0_9">0-9</string>
    <string name="special_chars"><![CDATA[*$&]]></string>
    <string name="description">Description</string>
    <string name="account_password">Account password</string>
    <string name="submit">Submit</string>
    <string name="verifying">Verifying...</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>