<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.generatePassword.GeneratePasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="175dp"
                android:layout_marginEnd="16dp"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/generatedPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    tools:text="Hello lol" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5" />

                <SeekBar
                    android:id="@+id/passwordLengthSeekBar"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:max="30"
                    android:min="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_30" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/generatePasswordButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/generate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="230dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/minusSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:text="@string/a_z" />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/capsSwitch"
                    android:layout_gravity="center"
                    android:text="@string/a_z_caps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/numbersSwitch"
                    android:layout_gravity="center"
                    android:text="@string/_0_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/specialCharsSwitch"
                    android:layout_gravity="center"
                    android:text="@string/special_chars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>