<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        tools:context=".ui.login.LoginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.login.LoginFragment">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.Material.Light.ProgressBar"
                android:layout_width="180dp"
                android:layout_height="122dp"
                android:layout_marginTop="25dp"
                android:progressTint="@color/teal_200"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/LoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/cinzel_decorative_bold"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="34sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/titleWalletIcon"
                android:layout_width="157dp"
                android:layout_height="110dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/wallet_icon"
                android:src="@drawable/ic_baseline_account_balance_wallet_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LoginTitle"
                app:layout_constraintVertical_bias="0.155" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                style="@style/Widget.MaterialComponents.CardView"
                android:elevation="2dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleWalletIcon">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/loginEmailLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loginEmailInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/loginPasswordLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loginPasswordInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/loginButton"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="140dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/login" />

                    <TextView
                        android:id="@+id/goToRegister"
                        android:layout_marginTop="20dp"
                        android:text="@string/register"
                        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/restorePassButton"
                        android:layout_marginTop="10dp"
                        android:text="@string/restore_password"
                        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>