<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addPassword.AddPasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginStart="16dp"
                android:elevation="2dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordDescriptionLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/passwordDescriptionInput"
                            android:inputType="text"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/newPasswordLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_marginTop="25dp"
                        app:passwordToggleEnabled="true"
                        android:layout_height="wrap_content"
                        android:hint="@string/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/newPasswordInput"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/accountPasswordLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        app:passwordToggleEnabled="true"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:hint="@string/account_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/accountPasswordInput"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="150dp"
                        android:layout_marginTop="30dp"
                        android:id="@+id/submitButton"
                        android:text="@string/submit"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="152dp"
                android:layout_height="105dp"
                android:layout_marginTop="520dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>